--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,4 +4,11 @@
 
 * {
   box-sizing: border-box;
+  letter-spacing: 0.025em;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  background-color: #292b32;
 }
