--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,3 +12,12 @@
 body {
   background-color: #292b32;
 }
+
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
